--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>hotel universo</title>
-  </head>
-  <body>
-    <h1>Hotel Universo</h1>
-    <p>not all those who wonder are lost</p>
-  </body>
-</html>
+---
+layout: default
+---
+
+<h1>Hotel Universo</h1>
+<p>not all those who wonder are lost</p>
