init_local_repo

--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: default
 ---
 
 <h1>Reception</h1>
-<p>not all those who wonder are lost</p>
+<p>not all those who wonder are lost wankers</p>
